# AoC_2021

./: .gitignore  pyproject.toml
solutions/: day_1.py  day_2.py  day_3.py  input_helper.py
