[tool.poetry]
name = "aoc_2021"
version = "0.1.0"
description = ""
authors = ["JaffarA <jaffar.almaleki@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.9"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
